# voicemode

./: .ai_docs  .audio  .claude  .comms  .containerignore  .conventions  .env.example  .env.local.kokoro  .gitignore  .mcp.json  .readthedocs.yaml  .repos.txt  .shadowfile.test  .voicemode  .voicemode.env  .voices.txt  2025-08-21-session-notes.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md-20250627  CLAUDE.md-maya  CLAUDE.md.in  CLAUDE.project.md  CLAUDE_CONTEXT.md  CLAUDE_NOTE_TO_SELF.md  COMMIT-MESSAGE.txt  CONTAINER.md  CONTRIBUTING.md  CONVENTIONS.md  CONVERSATION_TREE.md  COREML_REVIEW.md  COREML_SPEC.md  Containerfile  DOWNLOAD_PROGRESS_SPEC.md  DUAL_PACKAGE_NAMES.md  FRONTEND_URL_CONFIG_TASK.md  GLOSSARY.md  IMPLEMENTATION_SUMMARY.md  INSIGHTS.md  LICENSE  (+69 more)
.claude/: settings.json
.claude/agents/: baby-bear.md  mama-bear.md  papa-bear.md  theditor.md
.claude/commands/: voice-chat.md
.external/: Kokoro-FastAPI  awesome-mcp-servers  livekit  modelcontextprotocol-servers  repos.txt  voice-assistant-frontend  voice-assistant-swift  whisper.cpp
.github/workflows/: build-container.yml  create-release.yml  deploy-pages.yml  deploy-worker.yml  publish-pypi-and-mcp.yml  publish-pypi.yml  test-installer.yml  test.yml
ai_docs/: mcp-config-json.md
assets/: README.md
assets/prompts/: README.md  audio-visualization.md  h2g2-style.md  modern-minimal.md  terminal-retro.md
config-examples/: README.md
config-examples/claude-code/: README.md
config-examples/claude-desktop/: docker.json  livekit.json  pip-install.json  podman.json  python-m.json  uvx.json
configuration-refactor/: IMPLEMENTATION-SUMMARY.md  README.md  phase1-provider-resilience.md  phase2-configuration-enhancement.md
docs/: README.md  api-discovery-urls.md  audio-format-migration.md  configuration-philosophy.md  configuration.md  gen_pages.py  install-services-feature.md  installation-tools.md  kokoro.md  livekit-service-design.md  local-development-uvx.md  mcp-config-json.md  migration-guide.md  npm-global-no-sudo.md  openai-api-routing.md  pypi-statistics.md  requirements.txt  selective-tool-loading.md  service-health-checks.md  shell-completion.md  silence-detection.md  statistics-dashboard.md  vscode-configuration.md  whisper.cpp.md  whisper.md
docs/.archive/: LIVEKIT_SETUP.md  configuration-philosophy.md  frontend-env-vars-issue.md  install-robustness-analysis.md  livekit-implementation-summary.md  local-development-uvx.md  npm-global-no-sudo.md  openai-api-routing.md  requirements.txt  service-health-checks.md  uv.md  vad-debugging.md  vscode-configuration.md  whisper.cpp.md
docs/agents/: theditor.md
docs/api-reference/: configuration.md  tools.md
docs/architecture/: refactoring-services-flatten.md
docs/claude-instructions/: think-out-loud.md
docs/comms/: claude-code-issue-2116-reply.md
docs/concepts/: architecture.md
docs/configuration/: README.md  environment.md  (+4 more)
examples/: claude-settings.json
installer/: README.md  pyproject.toml
mcp-servers/: README.md  voice-mcp
notebooks/: README.md  conversation_compiler.ipynb  requirements.txt
npm-voicemode/: .npmignore  README.md  index.js  package.json
python-package/: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  run_tests.sh
python-package/src/voice_mcp/: __init__.py  __main__.py  __version__.py  cli.py  core.py  server.py
python-package/src/voice_mcp/scripts/: voice-mcp
python-package/tests/: test_tts_stability.py  test_voice_mcp.py
scripts/: conversation_browser.py  diagnose-wsl-audio.py  install_audio_deps.sh  process-readme-for-docs.py  release.py  setup-npm-global.sh  sync-dependencies.sh  tail-exchanges  tail-exchanges-pretty  test-stt-direct.py  test-vad-enhancement.py  test_installer.py  view-exchanges  view_event_logs.py
shell/: aliases
tasks/: README.md  error-when-other-user-starts.txt  fix-service-stop-start.md  implement-audio-device-selection.md  kokoro_fastapi_installer_spec.md  provider-registry-design.md  registry-review.md  service-namespace-consistency.md  service-tools-refactoring-2.md  service-tools-refactoring.md  uninstall-tools.md  version-management.md  voicemode_feat_converse-output-profiles.md  voicemode_feat_install-sh-services.md  voicemode_fix_unified-whisper-startup-script.md  voicemode_fix_whisper-status-model-detection.md  whisper-model-management.md  whisper_cpp_installer_spec.md
testing/: .env.example  setup-fedora.sh  setup-macos.sh  setup-ubuntu.sh
tests/: __init__.py  conftest.py  test_audio_device_selection.py  test_audio_format_config.py  test_changelog_resource.py  test_cli_config_edit.py  test_concurrent_stdio.py  test_config_tilde_expansion.py  test_configuration_management.py  test_conversation_browser_playback.py  test_converse_critical_path.py  test_dependencies.py  test_diagnostics.py  test_endpoint_info_attributes.py  test_ffmpeg_check.py  test_help_comprehensive.py  test_install_functions.py  test_install_integration.py  test_install_script.py  test_install_script_unit.py  test_installers.py  test_livekit_mcp_tools.py  test_livekit_service.py  test_makefile_portability.py  test_min_duration_integration.py  test_openai_error_parser.py  test_provider_detection.py  test_provider_resilience.py  test_provider_resilience_simple.py  test_provider_selection.py  test_provider_tools.py  test_release_notes_prompt.py  test_selective_tool_loading.py  test_server_syntax.py  test_service_commands.bats  test_service_file_updates.py  test_service_health_checks.py  test_silence_detection.py  test_simple.py  test_skip_tts.py  (+14 more)
voice_mcp/: __init__.py  __version__.py  cli.py  config.py  core.py  provider_discovery.py  providers.py  server.py  server_new.py  shared.py  statistics.py  streaming.py
voice_mode/: __init__.py  __main__.py  __version__.py  cli.py  cli.py.backup  config.py  conversation_logger.py  core.py  dependencies.yaml  openai_error_parser.py  pronounce.py  provider_discovery.py  providers.py  server.py  shared.py  simple_failover.py  statistics.py  statistics_tracking.py  streaming.py  version.py  voice_preferences.py  whisper_model_unified.py
(+422 files in other folders)
