# WARNING: This is a companion to pyproject.toml for the voice-mode package
# Any changes to dependencies, version, or other settings in pyproject.toml
# should be synchronized here to ensure voice-mcp and voice-mode packages
# remain functionally identical.
#
# The only intended differences are:
# - name: "voice-mode" vs "voice-mcp"
# - description: mentions dual availability
# - scripts: different command names
#
# Consider using 'make sync-tomls' if available, or manually update both files.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voice-mode"
dynamic = ["version"]
description = "VoiceMode - Voice interaction capabilities for AI assistants (formerly voice-mcp)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "mbailey", email = "mbailey@example.com"},
]
keywords = ["mcp", "voice", "livekit", "speech", "tts", "stt", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "uv>=0.4.0",
    "fastmcp>=2.0.0",
    "numpy",
    "sounddevice",
    "scipy",
    "openai>=1.0.0",
    "pydub",
    "audioop-lts; python_version >= '3.13'",
    "simpleaudio",
    "httpx",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "twine>=4.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/mbailey/voicemode"
Repository = "https://github.com/mbailey/voicemode"
Issues = "https://github.com/mbailey/voicemode/issues"

[project.scripts]
voice-mode = "voice_mcp.cli:voice_mode"
voicemode = "voice_mcp.cli:voice_mode"
voice-mcp = "voice_mcp.cli:voice_mcp"

[tool.hatch.build.targets.wheel]
packages = ["voice_mcp"]

[tool.hatch.build.targets.sdist]
include = [
  "/voice_mcp",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
  "/CHANGELOG.md",
]
exclude = [
  "**/__pycache__",
  "**/*.pyc",
  "**/*.pyo",
  "**/*.pyd",
  "**/.DS_Store",
  "**/*.log",
]

[tool.hatch.version]
path = "voice_mcp/__version__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
# Exclude manual test directory
addopts = "--ignore=tests/manual"